# IA_AGENT

Evaluation_finale/: CrediBot_Report.docx  Evaluation_CrediBot.xlsx  README.md  app.py  evaluation.py  excel_report.py  graph.py  prompts.py  pyproject.toml  rag.py  report.py  state.py  tools.py
IA_AGENTIQUE/: README.md
